--- a/style.css
+++ b/style.css
@@ -37,13 +37,16 @@
 	background-color: purple;
 } */
 body {
+	padding: 10px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	font-family: "Courier New", Courier, monospace;
+	color: black;
+	background-color: rgb(172, 155, 188);
 }
-
+/* 
 button {
 	font-size: 18px;
 	font-family: sans-serif;
@@ -69,4 +72,4 @@ button {
 
 button:hover {
 	background-color: purple;
-}
+} */
